# pacsanini

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: pr.yaml
LICENSES/: ALEMBIC_LICENSE
docs/: index.md
docs/about/: code_of_conduct.md  contributing.md  dco.md  license.md
docs/api_reference/: cli.md  config.md  convert.md  dashboard.md  db.md  errors.md  index.md  io.md  models.md  net.md  parse.md  pipeline.md  utils.md
docs/cli_reference/: index.md
docs/user_guide/: collection.md  configuration.md  index.md  installation.md  visualization.md
docs/user_guide/tutorials/: database.md  finding.md  moving.md  parsing.md  pipeline.md  storescp.md
requirements/: requirements.txt  requirements_dev.txt  requirements_doc.txt
scripts/: build-exe.py  check_copyright.py  export_requirements.sh  setup_env.sh
src/pacsanini/: __init__.py  __main__.py  __version__.py  config.py  convert.py  errors.py  models.py  parse.py  utils.py
src/pacsanini/cli/: __init__.py  base.py  commands.py  config.py  dashboard.py  db.py  net.py  parse.py  pipeline.py  utils.py
src/pacsanini/dashboard/: __init__.py  app.py  env.py
src/pacsanini/dashboard/assets/: base.css  dashboard.css
src/pacsanini/db/: __init__.py  crud.py  dcm2model.py  migrate.py  models.py  parser.py  utils.py  views.py
src/pacsanini/db/migrations/: alembic.ini  env.py
src/pacsanini/db/migrations/versions/: eef30b8456eb_initial_configuration.py
src/pacsanini/io/: __init__.py  base_parser.py  df_parser.py  io_parsers.py
src/pacsanini/net/: __init__.py  c_echo.py  c_find.py  c_move.py  c_store.py  storescp.py
src/pacsanini/pipeline/: __init__.py  notifications.py  orchestra.py  tasks.py
tests/: config_test.py  conftest.py  convert_test.py  models_test.py  parse_test.py  utils_test.py
tests/cli/: base_test.py  commands_test.py  config_test.py  db_test.py  net_test.py  parse_test.py  utils_test.py
tests/data/: sqlparse_conf.yaml  tags_conf  tags_conf.yaml  test_conf.yaml
tests/data/dicom-results/: dicom_tags.csv  dicom_tags.json
tests/db/: conftest.py  crud_test.py  dcm2model_test.py  parser_test.py  utils_test.py
tests/docker/: docker-compose.yaml
tests/docker/config/: orthanc.json
tests/io/: conftest.py  csv_parser_test.py  df_parser_test.py  json_parser_test.py
tests/net/: c_echo_test.py  c_find_test.py  c_move_test.py  conftest.py  storescp_test.py
tests/pipeline/: __init__.py  orchestra_test.py
